--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Redbull Racing</title>
+</head>
+<body>
+  <h1>RB19 o carro mais dominante de 2023</h1>
+  <p>Em 2023, a Red Bull dominou a Fórmula 1 de forma impressionante, conquistando 21 vitórias em 22 corridas.
+  Max Verstappen, com sua pilotagem impecável, venceu 19 dessas corridas, estabelecendo um novo recorde de aproveitamento em uma temporada.
+  O carro RB19, projetado por Adrian Newey, foi considerado o mais dominante da história da categoria.</p>
+<img>
+src="https://pt.wikipedia.org/wiki/Ficheiro:FIA_F1_Austria_2023_Nr._11_(2).jpg#/media/Ficheiro:FIA_F1_Austria_2023_Nr._11_(2).jpg"
+  alt="RB19" width="400">
 
+  <iframe width="560" height="315" src=https://www.youtube.com/watch?v=xW4F3OBbwSs"
+    title="Video sobre o RB19" frameborder="0" allowfullscreen></iframe>
+</body>
+</html>
+    
